--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv(r\"C:\\Users\\ramiu\\Desktop\\ineuron projects\\RentalBikeSharePrediction\\notebooks\\data\\hour.csv\")\n"
+    "df=pd.read_csv(r\"C:\\Users\\ramiu\\Desktop\\ineuron\\RentalBikeSharePrediction\\notebooks\\data\\hour.csv\")\n"
    ]
   },
   {
@@ -1895,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1904,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1913,7 +1913,7 @@
        "Index([], dtype='object')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1955,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1983,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1996,14 +1996,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ramiu\\Desktop\\ineuron projects\\RentalBikeSharePrediction\\env\\lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "c:\\Users\\ramiu\\Desktop\\ineuron\\RentalBikeSharePrediction\\env\\lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -2025,7 +2025,7 @@
        "         0.        ,  0.        ]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2036,7 +2036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2057,7 +2057,7 @@
        "         3.66583654,  0.        ]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2068,7 +2068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2102,7 +2102,7 @@
        "       'cat_pipelines__weathersit_4'], dtype=object)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2113,14 +2113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ramiu\\Desktop\\ineuron projects\\RentalBikeSharePrediction\\env\\lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "c:\\Users\\ramiu\\Desktop\\ineuron\\RentalBikeSharePrediction\\env\\lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -2133,7 +2133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2571,7 +2571,7 @@
        "[12165 rows x 51 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2582,7 +2582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3020,7 +3020,7 @@
        "[5214 rows x 51 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3031,7 +3031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3070,7 +3070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3081,7 +3081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -3098,7 +3098,7 @@
        " 'Bagging Regressor']"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3109,14 +3109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ramiu\\Desktop\\ineuron projects\\RentalBikeSharePrediction\\env\\lib\\site-packages\\sklearn\\base.py:1152: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "c:\\Users\\ramiu\\Desktop\\ineuron\\RentalBikeSharePrediction\\env\\lib\\site-packages\\sklearn\\base.py:1152: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
       "  return fit_method(estimator, *args, **kwargs)\n"
      ]
     },
@@ -3126,17 +3126,17 @@
      "text": [
       "Random Forest\n",
       "Model Training Performance\n",
-      "RMSE: 57.226065366119656\n",
-      "MAE: 35.69868552614755\n",
-      "R2 score 89.98028307108939\n",
+      "RMSE: 56.88648824835839\n",
+      "MAE: 35.56064331607212\n",
+      "R2 score 90.09884343428735\n",
       "===================================\n",
       "\n",
       "\n",
       "Decision Tree\n",
       "Model Training Performance\n",
-      "RMSE: 79.59025564497533\n",
-      "MAE: 46.421077867280395\n",
-      "R2 score 80.61849585518914\n",
+      "RMSE: 79.9227976043652\n",
+      "MAE: 46.684599156118146\n",
+      "R2 score 80.45619890514641\n",
       "===================================\n",
       "\n",
       "\n"
@@ -3146,7 +3146,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ramiu\\Desktop\\ineuron projects\\RentalBikeSharePrediction\\env\\lib\\site-packages\\sklearn\\ensemble\\_gb.py:424: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "c:\\Users\\ramiu\\Desktop\\ineuron\\RentalBikeSharePrediction\\env\\lib\\site-packages\\sklearn\\ensemble\\_gb.py:424: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n"
      ]
     },
@@ -3157,8 +3157,8 @@
       "Gradient Boosting\n",
       "Model Training Performance\n",
       "RMSE: 83.87227162364358\n",
-      "MAE: 60.23544412102259\n",
-      "R2 score 78.4769164988131\n",
+      "MAE: 60.2354441210226\n",
+      "R2 score 78.47691649881308\n",
       "===================================\n",
       "\n",
       "\n",
@@ -3176,11 +3176,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ramiu\\Desktop\\ineuron projects\\RentalBikeSharePrediction\\env\\lib\\site-packages\\xgboost\\core.py:160: UserWarning: [00:36:48] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0b3782d1791676daf-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:742: \n",
+      "c:\\Users\\ramiu\\Desktop\\ineuron\\RentalBikeSharePrediction\\env\\lib\\site-packages\\xgboost\\core.py:160: UserWarning: [01:15:02] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0b3782d1791676daf-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:742: \n",
       "Parameters: { \"verbose\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n",
-      "c:\\Users\\ramiu\\Desktop\\ineuron projects\\RentalBikeSharePrediction\\env\\lib\\site-packages\\sklearn\\utils\\validation.py:1183: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "c:\\Users\\ramiu\\Desktop\\ineuron\\RentalBikeSharePrediction\\env\\lib\\site-packages\\sklearn\\utils\\validation.py:1183: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n"
      ]
     },
@@ -3198,9 +3198,9 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model Training Performance\n",
-      "RMSE: 139.99118444135496\n",
-      "MAE: 117.22425775685599\n",
-      "R2 score 40.038974045861885\n",
+      "RMSE: 140.30980739341314\n",
+      "MAE: 118.85886574010696\n",
+      "R2 score 39.76571825731286\n",
       "===================================\n",
       "\n",
       "\n",
@@ -3218,7 +3218,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ramiu\\Desktop\\ineuron projects\\RentalBikeSharePrediction\\env\\lib\\site-packages\\sklearn\\utils\\validation.py:1183: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "c:\\Users\\ramiu\\Desktop\\ineuron\\RentalBikeSharePrediction\\env\\lib\\site-packages\\sklearn\\utils\\validation.py:1183: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n"
      ]
     },
@@ -3240,7 +3240,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ramiu\\Desktop\\ineuron projects\\RentalBikeSharePrediction\\env\\lib\\site-packages\\sklearn\\ensemble\\_bagging.py:509: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "c:\\Users\\ramiu\\Desktop\\ineuron\\RentalBikeSharePrediction\\env\\lib\\site-packages\\sklearn\\ensemble\\_bagging.py:509: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  return column_or_1d(y, warn=True)\n"
      ]
     },
@@ -3250,9 +3250,9 @@
      "text": [
       "Bagging Regressor\n",
       "Model Training Performance\n",
-      "RMSE: 61.75349723376418\n",
-      "MAE: 38.55028065464774\n",
-      "R2 score 88.33215115140547\n",
+      "RMSE: 60.48265869257558\n",
+      "MAE: 37.46794751310575\n",
+      "R2 score 88.80744012629351\n",
       "===================================\n",
       "\n",
       "\n"
@@ -3286,24 +3286,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.899802830710894,\n",
-       " 0.8061849585518914,\n",
-       " 0.784769164988131,\n",
+       "[0.9009884343428735,\n",
+       " 0.8045619890514641,\n",
+       " 0.7847691649881309,\n",
        " 0.6732709132843766,\n",
        " 0.9158854066373409,\n",
-       " 0.40038974045861886,\n",
+       " 0.39765718257312865,\n",
        " 0.7816305583558159,\n",
        " 0.40385442370684566,\n",
-       " 0.8833215115140547]"
+       " 0.8880744012629351]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3314,7 +3314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3346,12 +3346,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>0.899803</td>\n",
+       "      <td>0.900988</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.806185</td>\n",
+       "      <td>0.804562</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -3371,7 +3371,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.400390</td>\n",
+       "      <td>0.397657</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -3386,7 +3386,7 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Bagging Regressor</td>\n",
-       "      <td>0.883322</td>\n",
+       "      <td>0.888074</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3394,18 +3394,18 @@
       ],
       "text/plain": [
        "                 Model Name  R2_Score\n",
-       "0             Random Forest  0.899803\n",
-       "1             Decision Tree  0.806185\n",
+       "0             Random Forest  0.900988\n",
+       "1             Decision Tree  0.804562\n",
        "2         Gradient Boosting  0.784769\n",
        "3         Linear Regression  0.673271\n",
        "4      XGBoosting Regressor  0.915885\n",
-       "5        AdaBoost Regressor  0.400390\n",
+       "5        AdaBoost Regressor  0.397657\n",
        "6       KNeighbor Regressor  0.781631\n",
        "7  Support Vector Regressor  0.403854\n",
-       "8         Bagging Regressor  0.883322"
+       "8         Bagging Regressor  0.888074"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
