--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2024, 1, 15, 0, 47, 22, 186023)"
+       "datetime.datetime(2024, 1, 15, 1, 49, 48, 152145)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,16 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'01_15_2024_00_47_53.log'"
+       "'01_15_2024_01_49_49.log'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,16 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\ramiu\\\\Desktop\\\\ineuron projects\\\\RentalBikeSharePrediction\\\\notebooks\\\\logs'"
+       "'c:\\\\Users\\\\ramiu\\\\Desktop\\\\ineuron\\\\RentalBikeSharePrediction\\\\notebooks\\\\logs'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,11 +82,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "logging.info(\"here i have just tested the thing \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "C:\\Users\\ramiu\\AppData\\Local\\Temp\\ipykernel_17672\\1901770474.py\n",
+      "division by zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "     a=1/0\n",
+    "except Exception as e:\n",
+    "     _,_,exc_tb=sys.exc_info()\n",
+    "     print(exc_tb.tb_lineno)\n",
+    "     print(exc_tb.tb_frame.f_code.co_filename)\n",
+    "     \n",
+    "     print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class customexception(Exception):\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'e' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m customexception(\u001b[43me\u001b[49m,sys)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'e' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "raise customexception(e,sys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, None, None)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.exc_info()\n"
    ]
   }
  ],
